fixed wrapping on navbar again

--- a/public/css/bootStyle.css
+++ b/public/css/bootStyle.css
@@ -31,3 +31,52 @@ body {
     bottom: 0px;
     right: 0px;
 }
+
+/*.routeSelector {*/
+    /*font-size: .8em;*/
+    /*position: fixed;*/
+    /*top: 100px;*/
+    /*left: 20px;*/
+    /*width: 250px;*/
+    /*height: 200px;*/
+    /*background-color: #f8f8f8;*/
+    /*border-radius: 4px;*/
+    /*z-index: 2;*/
+/*}*/
+
+@media (max-width: 1000px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+}
